--- a/index.html
+++ b/index.html
@@ -1,90 +1,247 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Myntra-Like E-commerce</title>
+    <title>MYNTRA BY PRAVEEN</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script src="jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="myntra.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="myntra.js" defer></script>
+    <script src="bag.js"></script>
 </head>
+
 <body>
-
-<header>
-    <div class="logo-container">
-        <img src="logo.png" alt="Logo" class="myntra-home">
-    </div>
-    <nav class="nav-bar">
-        <a href="#">Women</a>
-        <a href="#">Men</a>
-        <a href="#">Kids</a>
-        <a href="#">Home</a>
-    </nav>
-    <div class="action-bar">
+    <header>
+        <div class="logo-container">
+            <a href="#"><img class="myntra-home" src="img/logo.jpg" alt=""></a>
+        </div>
+        <nav class="nav-bar">
+            <a href="#" id="man">Man</a>
+            <a href="#" id="women">Women</a>
+            <a href="#" id="kid">Kids</a>
+            <a href="#" id="home">Home & Living </a>
+            <a href="#" id="beauty">Beauty</a>
+            <a href="#" id="stu">Studio <sup>New</sup></a>
+        </nav>
         <div class="search-bar">
-            <input type="text" class="search-input" placeholder="Search...">
-            <div id="search-icon" class="material-icons">search</div>
+            <input class="search-input" type="" placeholder="Search for products, brand and more">
+            <span class="material-symbols-outlined" id="search-icon">search</span>
         </div>
-        <div class="bag">
-            <span class="material-icons">shopping_bag</span>
-            <span class="bag-item-count">0</span>
+        <div class="action-bar">
+            <div class="action-container" id="person">
+                <div class="material-symbols-outlined per">person</div>
+                <span class="action-name person">Profile</span>
+            </div>
+            <div class="action-container bag">
+                <div class="material-symbols-outlined">Favorite</div>
+                <span class="action-name">Wishlist</span>
+            </div>
+            <div class="action-container bag">
+                <span class="material-symbols-outlined alp">Shopping_Bag</span>
+                <span class="action-name">Bag
+                    <a href="C:\Users\Dell\Desktop\project\myntra\bag.html" id="bage"> <span class="bag-item-count">0</span></a>
+                </span>
+            </div>
         </div>
-        <div id="person" class="material-icons">person</div>
-    </div>
-</header>
-
-<div class="banner-container"></div>
-
-<h2 class="category-heading">Featured Products</h2>
-<div class="items-container">
-    <div class="item-container">
-        <img src="item1.jpg" alt="Item 1" class="item-image">
-        <div class="company-name">Company Name</div>
-        <div class="item-name">Product Name</div>
-        <div class="price">
-            <span class="current-price">$50.00</span>
-            <span class="original-price">$70.00</span>
-            <span class="discount">-30%</span>
+    </header>
+    <main>
+        <div class="banner-container" style="background-image: url('https://images.pexels.com/photos/1587735/pexels-photo-1587735.jpeg');"></div>
+        <div class="category-heading">MEDAL WORTHY BRANDS TO BAG</div>
+        <div class="items-container">
+            <div class="item-container">
+                <img class="item-image" src="https://images.pexels.com/photos/769832/pexels-photo-769832.jpeg" alt="Product 1">
+                <div class="company-name">Brand 1</div>
+                <div class="item-name">Casual T-Shirt</div>
+                <div class="price">
+                    <span class="current-price">$29.99</span>
+                    <span class="original-price">$39.99</span>
+                    <span class="discount">30% Off</span>
+                </div>
+                <button class="btn-add-bag">Add to Bag</button>
+            </div>
+            <div class="item-container">
+                <img class="item-image" src="https://images.pexels.com/photos/3765605/pexels-photo-3765605.jpeg" alt="Product 2">
+                <div class="company-name">Brand 2</div>
+                <div class="item-name">Formal Shirt</div>
+                <div class="price">
+                    <span class="current-price">$49.99</span>
+                    <span class="original-price">$69.99</span>
+                    <span class="discount">20% Off</span>
+                </div>
+                <button class="btn-add-bag">Add to Bag</button>
+            </div>
+            <div class="item-container">
+                <img class="item-image" src="https://images.pexels.com/photos/3765605/pexels-photo-3765605.jpeg" alt="Product 3">
+                <div class="company-name">Brand 3</div>
+                <div class="item-name">Summer Dress</div>
+                <div class="price">
+                    <span class="current-price">$39.99</span>
+                    <span class="original-price">$59.99</span>
+                    <span class="discount">33% Off</span>
+                </div>
+                <button class="btn-add-bag">Add to Bag</button>
+            </div>
         </div>
-        <button class="btn-add-bag">Add to Bag</button>
-    </div>
-    <div class="item-container">
-        <img src="item2.jpg" alt="Item 2" class="item-image">
-        <div class="company-name">Company Name</div>
-        <div class="item-name">Product Name</div>
-        <div class="price">
-            <span class="current-price">$40.00</span>
-            <span class="original-price">$60.00</span>
-            <span class="discount">-33%</span>
+    </main>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3>ONLINE SHOPPING</h3>
+                <a href="#">Man</a>
+                <a href="#">Women</a>
+                <a href="#">Kids</a>
+                <a href="#">Home & Living </a>
+                <a href="#">Beauty</a>
+                <a href="#">Gift Card </a>
+                <a href="#">Myntra Insider </a>
+            </div>
+            <div class="footer-column">
+                <h3>USEFUL LINKS</h3>
+                <a href="#">Blog</a>
+                <a href="#">Careers</a>
+                <a href="#">Site Map</a>
+                <a href="#">Corporate Information </a>
+                <a href="#">Whitehat</a>
+                <a href="#">Gift Card </a>
+                <a href="#">Cleartrip </a>
+            </div>
+            <div class="footer-column">
+                <h3>CUSTOMER POLICIES</h3>
+                <a href="#">Contact Us</a>
+                <a href="#">FAQ</a>
+                <a href="#">T&C</a>
+                <a href="#">Terms Of Use </a>
+                <a href="#">Track Orders</a>
+                <a href="#">Shipping </a>
+                <a href="#">Cancellation</a>
+                <a href="#">Privacy policy</a>
+                <a href="#">Returns</a>
+                <a href="#">Grievance Office</a>
+            </div>
         </div>
-        <button class="btn-add-bag">Add to Bag</button>
-    </div>
-    <!-- Add more items as needed -->
-</div>
+        <hr>
+        <div class="copy-right">
+            @2024 www.myntra.com All rights reserved.
+        </div>
+    </footer>
 
-<footer class="footer-container">
-    <div class="footer-column">
-        <h3>About Us</h3>
-        <a href="#">Our Story</a>
-        <a href="#">Careers</a>
-        <a href="#">Press</a>
+    <div class="after-click" id="after-click">
+        <h3 id="online">MEN</h3>
+        <br>
+        <div class="man-item">
+            <a href="#" class="zoom">Topwear</a>
+            <a href="#" class="zoom">T-Shirts</a>
+            <a href="#" class="zoom">Casual Shirts</a>
+            <a href="#" class="zoom">Formal Shirts </a>
+            <a href="#" class="zoom">Sweatshirts</a>
+            <a href="#" class="zoom">Sweaters </a>
+            <a href="#" class="zoom">Blazers & Coats </a>
+        </div>
     </div>
-    <div class="footer-column">
-        <h3>Customer Service</h3>
-        <a href="#">Contact Us</a>
-        <a href="#">Returns</a>
-        <a href="#">FAQs</a>
+    <div class="after-click-1" id="after-click-1">
+        <h3 id="online-1">WOMEN</h3>
+        <br>
+        <div class="man-item-1">
+            <a href="#" class="zoom">Indian & Fusion Wear</a>
+            <a href="#" class="zoom">Kurtas & Suits</a>
+            <a href="#" class="zoom">Kurtis, Tunics & Tops</a>
+            <a href="#" class="zoom">Ethnic Wear</a>
+            <a href="#" class="zoom">Leggings, Salwars & Churidars</a>
+            <a href="#" class="zoom">Skirts & Palazzos</a>
+            <a href="#" class="zoom">Dupattas & Shawls</a>
+        </div>
     </div>
-    <div class="footer-column">
-        <h3>Follow Us</h3>
-        <a href="#">Facebook</a>
-        <a href="#">Instagram</a>
-        <a href="#">Twitter</a>
-    </div>
-</footer>
 
-<div class="copy-right">
-    &copy; 2024 Your Brand Name. All Rights Reserved.
-</div>
+    <div class="after-click-2" id="after-click-2">
+        <h3 id="online-2">KID</h3>
+        <br>
+        <div class="man-item-2">
+            <a href="#" class="zoom">Infants</a>
+            <a href="#" class="zoom">Bodysuits</a>
+            <a href="#" class="zoom">Rompers & Sleepsuits</a>
+            <a href="#" class="zoom">Dresses</a>
+            <a href="#" class="zoom">Tshirts & Tops</a>
+            <a href="#" class="zoom">Innerwear & Sleepwear </a>
+            <a href="#" class="zoom">Winter Wear </a>
+            <a href="#" class="zoom">Clothing Sets </a>
+            <a href="#" class="zoom">Bottom wear </a>
+        </div>
+    </div>
 
+    <div class="after-click-3" id="after-click-3">
+        <h3 id="online-3">HOME ITEM</h3>
+        <br>
+        <div class="man-item-3">
+            <a href="#" class="zoom">Home Décor</a>
+                        <a href="#" class="zoom">Plants & Planters</a>
+            <a href="#" class="zoom">Aromas & Candles</a>
+            <a href="#" class="zoom">Clocks</a>
+            <a href="#" class="zoom">Festive Decor</a>
+            <a href="#" class="zoom">Pooja Essentials </a>
+            <a href="#" class="zoom">Wall Décor </a>
+            <a href="#" class="zoom">Showpieces & Vases </a>
+            <a href="#" class="zoom">Wall Décor </a>
+        </div>
+    </div>
+
+    <div class="after-click-4" id="after-click-4">
+        <h3 id="online-4">Beauty</h3>
+        <br>
+        <div class="man-item-4">
+            <a href="#" class="zoom">Baby Care</a>
+            <a href="#" class="zoom">Top</a>
+            <a href="#" class="zoom">Conditioner</a>
+            <a href="#" class="zoom">Masks</a>
+            <a href="#" class="zoom">Toys</a>
+            <a href="#" class="zoom">Haircare </a>
+            <a href="#" class="zoom">Shampoo </a>
+        </div>
+    </div>
+
+    <div class="after-click-6" id="after-click-6">
+        <h3 id="online-6">NEW</h3>
+        <br>
+        <div class="man-item-6">
+            <a href="#" class="zoom">Skincare, Bath & Body</a>
+            <a href="#" class="zoom">Face Moisturiser</a>
+            <a href="#" class="zoom">Masks & Peel</a>
+            <a href="#" class="zoom">Sunscreen</a>
+            <a href="#" class="zoom">Cleanser</a>
+            <a href="#" class="zoom">Pullover </a>
+            <a href="#" class="zoom">Face Wash</a>
+            <a href="#" class="zoom">Serum </a>
+            <a href="#" class="zoom">Body Wash </a>
+            <a href="#" class="zoom">Body Lotion </a>
+        </div>
+    </div>
+
+    <div class="after-click-nn" id="after-click-nn">
+        <div class="a-secnn">
+            <div class="hp-divnn">
+                <h3 id="online-newnn">ACCOUNT</h3>
+                <p class="accparann">To access account and manage orders</p>
+            </div>
+            <div class="login-divnn">
+                <a href="C:\Users\Dell\Desktop\project\myntra\loginpage.html" class="loginlnn">LOGIN/SIGNUP</a>
+            </div>
+        </div>
+        <div class="man-item-nn">
+            <a href="#" class="zoomnn">Orders</a>
+            <a href="#" class="zoom">Wishlist</a>
+            <a href="#" class="zoom">Gift Cards</a>
+            <a href="#" class="zoom">Contact Us</a>
+            <a href="#" class="zoom">Myntra Insider <sup class="supcnn">New</sup></a>
+        </div>
+        <div class="man-item-nn">
+            <a href="#" class="zoomnn">Myntra Credit</a>
+            <a href="#" class="zoom">Saved Cards</a>
+            <a href="#" class="zoom">Saved VPA</a>
+            <a href="#" class="zoom">Saved Addresses</a>
+        </div>
+    </div>
 </body>
+
 </html>
+            
