--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <header>
+
         <div class="logo-container">
             <a href="#"><img class="myntra-home" src="img/logo.jpg" alt=""></a>
         </div>
@@ -26,66 +27,45 @@
             <a href="#" id="stu">Studio <sup>New</sup></a>
         </nav>
         <div class="search-bar">
-            <input class="search-input" type="" placeholder="Search for products, brand and more">
-            <span class="material-symbols-outlined" id="search-icon">search</span>
+            <input class="search-input" type="" placeholder="Search for products,brand and more">
+            <span class="material-symbols-outlined  " id="search-icon">search</span>
         </div>
-        <div class="action-bar">
-            <div class="action-container" id="person">
+        <div class="action-bar ">
+            <div class="action-container " id="person">
                 <div class="material-symbols-outlined per">person</div>
-                <span class="action-name person">Profile</span>
+                <span class="action-name person ">Profile</span>
             </div>
             <div class="action-container bag">
-                <div class="material-symbols-outlined">Favorite</div>
+                <div class="material-symbols-outlined  " class="action-bar">Favorite</div>
                 <span class="action-name">Wishlist</span>
             </div>
             <div class="action-container bag">
-                <span class="material-symbols-outlined alp">Shopping_Bag</span>
-                <span class="action-name">Bag
+
+
+                <span class="material-symbols-outlined alp" class="action-bar">  Shopping_Bag</span>
+                <span class="action-name ">Bag
                     <a href="C:\Users\Dell\Desktop\project\myntra\bag.html" id="bage"> <span class="bag-item-count">0</span></a>
+
+
                 </span>
             </div>
         </div>
     </header>
     <main>
-        <div class="banner-container" style="background-image: url('https://images.pexels.com/photos/1587735/pexels-photo-1587735.jpeg');"></div>
+
+        <div class="banner-container"><img class="banner-img" src="" alt=""></div>
         <div class="category-heading">MEDAL WORTHY BRANDS TO BAG</div>
         <div class="items-container">
-            <div class="item-container">
-                <img class="item-image" src="https://images.pexels.com/photos/769832/pexels-photo-769832.jpeg" alt="Product 1">
-                <div class="company-name">Brand 1</div>
-                <div class="item-name">Casual T-Shirt</div>
-                <div class="price">
-                    <span class="current-price">$29.99</span>
-                    <span class="original-price">$39.99</span>
-                    <span class="discount">30% Off</span>
-                </div>
-                <button class="btn-add-bag">Add to Bag</button>
-            </div>
-            <div class="item-container">
-                <img class="item-image" src="https://images.pexels.com/photos/3765605/pexels-photo-3765605.jpeg" alt="Product 2">
-                <div class="company-name">Brand 2</div>
-                <div class="item-name">Formal Shirt</div>
-                <div class="price">
-                    <span class="current-price">$49.99</span>
-                    <span class="original-price">$69.99</span>
-                    <span class="discount">20% Off</span>
-                </div>
-                <button class="btn-add-bag">Add to Bag</button>
-            </div>
-            <div class="item-container">
-                <img class="item-image" src="https://images.pexels.com/photos/3765605/pexels-photo-3765605.jpeg" alt="Product 3">
-                <div class="company-name">Brand 3</div>
-                <div class="item-name">Summer Dress</div>
-                <div class="price">
-                    <span class="current-price">$39.99</span>
-                    <span class="original-price">$59.99</span>
-                    <span class="discount">33% Off</span>
-                </div>
-                <button class="btn-add-bag">Add to Bag</button>
-            </div>
+
+
+
         </div>
+
+
+
     </main>
     <footer>
+
         <div class="footer-container">
             <div class="footer-column">
                 <h3>ONLINE SHOPPING</h3>
@@ -119,13 +99,35 @@
                 <a href="#">Privacy policy</a>
                 <a href="#">Returns</a>
                 <a href="#">Grievance Office</a>
+
             </div>
         </div>
         <hr>
         <div class="copy-right">
             @2024 www.myntra.com All rights reserved.
         </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </footer>
+
 
     <div class="after-click" id="after-click">
         <h3 id="online">MEN</h3>
@@ -175,7 +177,7 @@
         <br>
         <div class="man-item-3">
             <a href="#" class="zoom">Home Décor</a>
-                        <a href="#" class="zoom">Plants & Planters</a>
+            <a href="#" class="zoom">Plants & Planters</a>
             <a href="#" class="zoom">Aromas & Candles</a>
             <a href="#" class="zoom">Clocks</a>
             <a href="#" class="zoom">Festive Decor</a>
@@ -204,7 +206,7 @@
         <h3 id="online-6">NEW</h3>
         <br>
         <div class="man-item-6">
-            <a href="#" class="zoom">Skincare, Bath & Body</a>
+            <a href="" class="zoom">Skincare, Bath & Body</a>
             <a href="#" class="zoom">Face Moisturiser</a>
             <a href="#" class="zoom">Masks & Peel</a>
             <a href="#" class="zoom">Sunscreen</a>
@@ -214,34 +216,39 @@
             <a href="#" class="zoom">Serum </a>
             <a href="#" class="zoom">Body Wash </a>
             <a href="#" class="zoom">Body Lotion </a>
+
         </div>
     </div>
 
+
     <div class="after-click-nn" id="after-click-nn">
         <div class="a-secnn">
-            <div class="hp-divnn">
+            <DIV class="hp-divnn">
                 <h3 id="online-newnn">ACCOUNT</h3>
                 <p class="accparann">To access account and manage orders</p>
-            </div>
+            </DIV>
             <div class="login-divnn">
                 <a href="C:\Users\Dell\Desktop\project\myntra\loginpage.html" class="loginlnn">LOGIN/SIGNUP</a>
             </div>
         </div>
         <div class="man-item-nn">
-            <a href="#" class="zoomnn">Orders</a>
+            <a href="" class="zoomnn"> Orders</a>
             <a href="#" class="zoom">Wishlist</a>
             <a href="#" class="zoom">Gift Cards</a>
             <a href="#" class="zoom">Contact Us</a>
             <a href="#" class="zoom">Myntra Insider <sup class="supcnn">New</sup></a>
+
         </div>
         <div class="man-item-nn">
-            <a href="#" class="zoomnn">Myntra Credit</a>
+            <a href="" class="zoomnn">Myntra Credit</a>
             <a href="#" class="zoom">Saved Cards</a>
             <a href="#" class="zoom">Saved VPA</a>
             <a href="#" class="zoom">Saved Addresses</a>
+
         </div>
-    </div>
+
+
+
 </body>
 
 </html>
-            
